<resources>
    <string name="app_name">Soybean Gyan</string>
    <string name="title_saved">Saved</string>
    <string name="title_home">Home</string>
    <string name="title_advice">Advice</string>
    <string name="title_settings">Settings</string>
    <string name="title_read">Read</string>
    <string name="search_bar_text">Search Soybean Gyan</string>
    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string-array name="font_size_options">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="SoilRequirement">
        Soybean can be grown in variety of soil types. However, a well drained, sandy loam to clayey soils with medium water holding capacity, rich in organic carbon and leveled fields with near neutral pH is ideal for harnessing maximum soybean yield. Soil with excessive salts / sodium and poorly drained conditions are not suitable for soybean.
    </string>
    <string name="Tillage1">
        Deep ploughing is essential during summer, after harvesting the rabi crop. This facilitates exposing the hibernating insects to extreme heat and predatory birds as well as movement of nutrients and infiltration of soil water.
    </string>
    <string name="Tillage2">
        One deep ploughing once in 3-4 years, otherwise one normal ploughing in summer followed by 2 criss-cross harrowings or cultivation for breaking of soil clods will make ideal seed bed for a good crop of soybean cultivation.
    </string>
    <string name="Tillage3">
        To have sustainable soybean yield, it is very important to maintain soil health. Hence, farmers are advised to incorporate organic manure (well decomposed FYM @ 5-10 t/ha or Poultry Manure @ 2.5 t/ha) at the time of land reparation.
    </string>
    <string name="Tillage4">
        If the quantity of organic manure is limited, they are advised to apply the same on rotation basis in their fields every year. It is also advised to apply Gypsum @ 150-200 kg/ha along with FYM/Poulty manure before the last harrowing in case the nutritional requirement is to be planned without sulphur sources
    </string>
    <string name="Tillage5">
        Soon after arrival of monsoon, the land may be prepared by 2 criss-cross harrowings followed by planking to level the field. If the farmer is interested to apply PPI herbicide for control of weeds, this is the right time to do so.
    </string>
    <string name="Tillage6">
        But for getting the actual benefit of Pre-plant Incorporation (PPI) herbicide, they should ensure that sufficient moisture is present in the soil. This also requires additional tillage for proper mixing of herbicide in the soil.Hence it should be sprayed immediately before second harrowing.
    </string>
    <string name="Tillage7">
            During past few years, soybean yields have been adversely affected across the country because of adverse climatic conditions (Uncertainties/delayed or unpredictable onset of monsoon/heavy storms and long dry spells).
    </string>
    <string name="Tillage8">
        Considering these, farmers are advised to use BBF or Ridge and Furrow methods for soybean planting in order to mitigate the climatic adversities.
    </string>
    <string name="Tillage9">
        During long dry spells, the crop sown on flat land should receive a dora/kulpa/hoeing operation to reduce moisture loss from soil during early growth period (upto one month from sowing).
    </string>
    <string name="selection1">
        In order to avoid risk of yield reduction due to aberrant climatic situations, farmers are recommended to grow 3-4 soybean varieties with varying maturity periods (Varietal Cafeteria Approach) in their fields.
    </string>
    <string name="selection2">
        Different varieties possess resistance/tolerance to particular insect-pest and diseases. As they mature at different time, it gives convenience for the farmers during harvesting and threshing too.
    </string>
    <string name="selection3">
        Genetically, the yield of soybean varieties is inversely proportionate with maturity period. Long duration soybean varieties are able to give more yields subject to application of irrigation in event of early cessation of monsoon.
    </string>
    <string name="selection4">
        Farmers are advised to select 3-4 varieties popular among their zone and ensure the availability of seed of these varieties well in advance . They should also check the germination percentage of seed a fortnight prior to sowing so as to have optimum plant population. /tolerance to particular insect-pest and diseases. As they mature at different time, it gives convenience for the farmers during harvesting and threshing too.
    </string>
    <string name="selection5">
        Farmers are advised to check germination status of seed purchased/available with them before sowing. To ensure optimum plant population and thereby good yield, minimum 70% germination is essential. This can be done through sowing of 100 seeds in 1m X 1m plot and it is kept moist. From 5-8 days emergence is counted everyday till the count is stabilized.
    </string>
    <string name="selection6">
        The germination test can also be done by placing 100 seeds in between two newspaper sheets and rolling them with a moist cloth.
    </string>
    <string name="inoculation1">
        Seed treatment is very important operation in soybean considering number of fungal, bacterial and viral diseases which causes considerable reduction in plant population and thereby yield.

    </string>
    <string name="inoculation2">
Hence, farmers are advised to treat soybean seed at the time of sowing using 2g Thiram+1g Carbendazim per kg seed. They can also use mixed combination of Carboxin 37.5% + Thiram 37.5% per kg seed or Trichoderma viride @ 8-10 g/kg seed.

    </string>
    <string name="inoculation3">
In areas where Yellow Mosaic Virus is infecting the soybean crop every year, farmers are recommended to carry out seed treatment with Thiamethoxam 30 FS (10 ml/kg of seed). /kg seed.

    </string>
    <string name="inoculation4">
Once the seed treatment with fungicides and insecticide is done, farmers are advised to inoculate the treated seed with bioinoculants like Bradyrhizobium japonicum and Phosphate Solubilizing Mircro-organism (PSM) each @ 5 g/kg seed immediately before sowing.

    </string>
    <string name="inoculation5">
If the soybean is grown in nontraditional/new area, they should increase the quantity to at least 10 g/kg seed.

    </string>
    <string name="inoculation6">
Farmers are also advised to follow correct sequence of seed treatment with recommended fungicides followed by insecticide and seed inoculation. Similarly, seed treatment with fungicides as well as seed inoculation simultaneously should be avoided as the micro-organisms present in the culture are destroyed.

    </string>
    <string name="inoculation7">
However, if Trichoderma viride has to be used, all the three bioagents can be used in one go for seed treatment. They should procure these inputs (fungicides and culture) from the authentic sources and store in cool place to maintain their viability.

    </string>
    <string name="sowing1">

Since soybean is a rainfed crop grown during kharif season, it is sown only after the arrival of monsoon. Farmers are advised to sow their crop only after 100 mm rainfall is received to ensure germination of seed and development of the plant till next spell of rains.
    </string>
    <string name="sowing2">
The sowing of soybean seed may be done either using traditional tools like bullock drawn Dufan /Tifan /seed drill or by using tractor drawn machines like Seed-cum-Fertilizer drill, BBF Seed Drill, FIRB Seed Drill keeping row to row spacing of 45 cm and plant to plant spacing of 4-5cm at 3 cm depth.

    </string>
    <string name="sowing3">
In case of delayed sowing on account of late on-set of monsoon, farmers are advised to narrow the row spacing at 30 cm and increase the seed rate by 25% in order to optimize plant population and avert the likely yield loss due to slow growth.


    </string>
    <string name="sowing4">

The seed rate and germination percentage are inversely proportional to seed size of soybean varieties. The small seeded varieties are excellent in germination percentage compared to bold seeded varieties.
    </string>
    <string name="sowing5">

Therefore, the seed rate should be modified accordingly in order to achieve optimum plant population and yield. The recommended seed rate for soybean varieties having medium seed size (JS 20-29, JS 93-05, JS 2069) is 60-65 kg/ha while for bold seed varieties (JS 95-60, JS 20-34, NRC 7), the seed rate should be increased to 80 kg/ha. The seed rate for small seeded varieties like NRC 37 and JS 9752 should be reduced to only 50 kg/ha.

    </string>
    <string name="sowing6">
If farmers have not used PPI herbicide (PPI) herbicides, they are advised to use recommended pre-emergence herbicide immediately after sowing to before emergence of soybean.

    </string>
    <string name="fertilizer1">

Soybean is considered to be moderately exhaustive crop. Balanced nutrients application ensures better yield performance of soybean. The integration of 5-10 t Farm Yard Manure or 2.5 t poultry manure/ha along with the basal application of N:P2O5:K2O:S generally provides balanced nutrition for harnessing the yield potential of soybean.
    </string>
    <string name="icar_indian_institute_of_soybean_research">\nICAR-Indian Institute of Soybean Research</string>
    <string name="khandwa_road_indore_m_p_452001">Khandwa Road, Indore (M.P.) - 452001</string>
    <string name="phone_dr_v_s_bhatia_director_0731_2476188_dr_a_n_sharma_insect_management_9425958694_dr_sunil_dutt_billore_weed_management_9977763727_dr_b_u_dupare_crop_management_9425964016_dr_d_v_singh_farm_machinery_0731_2437922_dr_m_k_kuchlan_seed_and_variety_9340650457_dr_sanjeev_kumar_disease_management_9407072727_dr_laxman_singh_rajput_disease_management_7065157572_for_app_related_information_contact_dr_savita_kolhe_principal_scientist_0731_2437911_email_soybean_director_icar_gov_in_srdirector_gmail_com_fax_0731_2470520">Phone: \n\nDr. V.S. Bhatia, Director - 0731-2476188 \n\nDr. A.N. Sharma (Insect Management) - 9425958694 \n\nDr. Sunil Dutt Billore (Weed Management) - 9977763727 \n\nDr. B.U. Dupare (Crop Management) - 9425964016 \n\nDr. D.V. Singh (Farm Machinery) - 0731-2437922 \n\nDr. M.K. Kuchlan (Seed and Variety) - 9340650457 \n\nDr. Sanjeev Kumar (Disease Management) - 9407072727 \n\nDr. Laxman Singh Rajput (Disease Management) - 7065157572 \n\nFor App Related Information Contact: \n\nDr. Savita Kolhe, Principal Scientist - 0731-2437911 \n\n\nEmail: soybean.director@icar.gov.in \n srdirector@gmail.com \n\n\nFax: 0731-2470520</string>
    <string name="welcome_to_icar_s">welcome to ICAR\'s</string>
    <string name="soybean_gyan">Soybean Gyan</string>
    <string name="one_stop_solution">one stop solution</string>
    <string name="explore_soybean_gyan">Explore Soybean Gyan</string>
    <string name="scan_leaf_to_diagnosex">Scan leaf to diagnose</string>
    <string name="soybean_plantx">Soybean Plant</string>
    <string name="scan_soybean_leaf_to_identify_potential_disease_the_soybean_plant_is_suffering_n_nget_cure_by_our_accurate_machine_learning_modelx">Scan Soybean Leaf, to identify potential disease the Soybean plant is suffering.\n\nGet cure by our accurate Machine Learning Model.</string>
    <string name="leaf_disease_predictionx">Leaf Disease Prediction</string>
</resources>