<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.soybeangyan.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.soybeangyan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.soybeangyan.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.soybeangyan.ui.read.activities.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

<!--    <action-->
<!--        android:id="@+id/action_homeFragment_to_readFragment"-->
<!--        app:destination="@id/navigation_read" />-->

</navigation>