<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:background="?attr/colorSecondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="25sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/icar_indian_institute_of_soybean_research" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:textSize="20sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/khandwa_road_indore_m_p_452001" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/phone_dr_v_s_bhatia_director_0731_2476188_dr_a_n_sharma_insect_management_9425958694_dr_sunil_dutt_billore_weed_management_9977763727_dr_b_u_dupare_crop_management_9425964016_dr_d_v_singh_farm_machinery_0731_2437922_dr_m_k_kuchlan_seed_and_variety_9340650457_dr_sanjeev_kumar_disease_management_9407072727_dr_laxman_singh_rajput_disease_management_7065157572_for_app_related_information_contact_dr_savita_kolhe_principal_scientist_0731_2437911_email_soybean_director_icar_gov_in_srdirector_gmail_com_fax_0731_2470520" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

