<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectionMainActivity">


    <ImageView
        android:id="@+id/mPhotoImageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:contentDescription="@string/descriptionImage"
        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/darker_gray" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/mResultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mResultTextView"
        app:layout_constraintTop_toTopOf="@+id/mResultTextView">

        <ImageButton
            android:id="@+id/mDetectButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_baseline_play_arrow_24" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/buttonDiagnose"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cvDetect"
        app:layout_constraintStart_toStartOf="@+id/cvDetect"
        app:layout_constraintTop_toBottomOf="@+id/cvDetect" />

    <TextView
        android:id="@+id/mResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/defaultImage"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mGalleryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mPhotoImageView" />


    <Button
        android:id="@+id/mGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:padding="10dp"
        android:text="@string/buttonSelectPhoto"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvCam"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mResultTextView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/mGalleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mGalleryButton"
        app:layout_constraintTop_toTopOf="@+id/mGalleryButton">

        <ImageButton
            android:id="@+id/mCameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_baseline_camera_alt_24" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Camera"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cvCam"
        app:layout_constraintStart_toStartOf="@+id/cvCam"
        app:layout_constraintTop_toBottomOf="@+id/cvCam" />
</androidx.constraintlayout.widget.ConstraintLayout>