<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.saved.SavedFragment">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        tools:context=".ui.prediction.PredictionDescriptionActivity">

        <TextView
            android:id="@+id/tvDiseasePredicton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/scan_leaf_to_diagnosex"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tvSoybeanPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDiseasePredicton"
            android:layout_marginStart="42dp"
            android:text="@string/soybean_plantx"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvModelDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSoybeanPlant"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/scan_soybean_leaf_to_identify_potential_disease_the_soybean_plant_is_suffering_n_nget_cure_by_our_accurate_machine_learning_modelx"
                android:textSize="25sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"

            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="100sp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnRead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">


                <ImageView
                    android:id="@+id/imgSmart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="30px"
                    android:src="@drawable/ic_baseline_tips_and_updates_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSmartFarming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20px"
                    android:layout_toEndOf="@+id/imgSmart"
                    android:text="@string/leaf_disease_predictionx"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgSmart"
                    app:layout_constraintTop_toTopOf="parent" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>