<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment">
    <!--    app:layoutDescription="@xml/fragment_home_scene"-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCarousal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>


    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/transparent_background"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/cvCarousal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        >-->


    <RelativeLayout
        android:id="@+id/rlWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCarousal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:fontFamily="serif-monospace"
            android:text="@string/welcome_to_icar_s"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:fontFamily="sans-serif-black"
            android:text="@string/soybean_gyan"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:text="@string/one_stop_solution"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--    </androidx.cardview.widget.CardView>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSmartFarming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="100sp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnRead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/imgSmart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30px"
                android:src="@drawable/ic_baseline_library_books_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSmartFarming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:layout_toEndOf="@+id/imgSmart"
                android:text="@string/explore_soybean_gyan"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgSmart"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>